--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -1,4 +1,20 @@
 {
+  "yacl3.config.health-indicators:config.passive_mobs": "Show health of passive mobs",
+  "yacl3.config.health-indicators:config.hostile_mobs": "Show health of hostile mobs",
+  "yacl3.config.health-indicators:config.players": "Show health of players",
+
+  "yacl3.config.health-indicators:config.heart_offset": "Heart offset",
+  "yacl3.config.health-indicators:config.heart_offset.desc": "The distance between the top of the Entity and the health bar. Negative offset values can make the health bar render below or in the middle of the entity. Extreme offset values can make the health bar render out of view.",
+  "yacl3.config.health-indicators:config.offset_step_size": "Offset step size",
+  "yacl3.config.health-indicators:config.offset_step_size.desc": "The amount of offset that the keybind will change per press.",
+
+
+  "yacl3.config.health-indicators:config.category.toggles": "Toggles",
+  "yacl3.config.health-indicators:config.category.appearance": "Appearance",
+
+  "yacl3.config.health-indicators:config.category.appearance.group.heart_offset": "Health Bar Location Settings",
+
+
   "key.categories.healthindicators": "Player Health Indicators",
   "key.healthindicators.renderingEnabled": "Toggle Rendering",
   "key.healthindicators.heartStackingEnabled": "Toggle Heart Stacking",
