--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -7,6 +7,10 @@
   "yacl3.config.health-indicators:config.players.desc": "Displays a health bar above other players",
   "yacl3.config.health-indicators:config.self": "Show health of yourself",
   "yacl3.config.health-indicators:config.self.desc": "Displays a health bar above yourself in third person and in the inventory menu",
+  "yacl3.config.health-indicators:config.on_hit": "Show health after attack",
+  "yacl3.config.health-indicators:config.on_hit.desc": "Health bar will display only after the entity has been attacked.",
+  "yacl3.config.health-indicators:config.override_players_on_hit": "Always show player health",
+  "yacl3.config.health-indicators:config.override_players_on_hit.desc": "Overrides the above option to always display health of Players, even if they have not been attacked.",
 
   "yacl3.config.health-indicators:config.heart_offset": "Heart offset",
   "yacl3.config.health-indicators:config.heart_offset.desc": "The distance between the top of the Entity and the health bar. Negative offset values can make the health bar render below or in the middle of the entity. Extreme offset values can make the health bar render out of view.",
@@ -19,6 +23,8 @@
   "yacl3.config.health-indicators:config.category.appearance": "Appearance",
 
   "yacl3.config.health-indicators:config.category.appearance.group.heart_offset": "Health Bar Location Settings",
+  "yacl3.config.health-indicators:config.category.toggles.group.type": "Toggle Entity Types",
+  "yacl3.config.health-indicators:config.category.toggles.group.advanced": "Advanced",
 
 
   "key.categories.healthindicators": "Player Health Indicators",
