--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -9,8 +9,10 @@
   "yacl3.config.health-indicators:config.self.desc": "Displays a health bar above yourself in third person and in the inventory menu",
   "yacl3.config.health-indicators:config.on_hit": "Show health after attack",
   "yacl3.config.health-indicators:config.on_hit.desc": "Health bar will display only after the entity has been attacked.",
+  "yacl3.config.health-indicators:config.damaged_only": "Show health if low",
+  "yacl3.config.health-indicators:config.damaged_only.desc": "Health bar will display only if the entities health is lower than its max health. May not work in cases where entities have absorption effect.",
   "yacl3.config.health-indicators:config.override_players_on_hit": "Always show player health",
-  "yacl3.config.health-indicators:config.override_players_on_hit.desc": "Overrides the above option to always display health of Players, even if they have not been attacked.",
+  "yacl3.config.health-indicators:config.override_players_on_hit.desc": "Overrides the above options to always display health of Players, even if they have not been attacked or they are full health.",
 
   "yacl3.config.health-indicators:config.heart_offset": "Heart offset",
   "yacl3.config.health-indicators:config.heart_offset.desc": "The distance between the top of the Entity and the health bar. Negative offset values can make the health bar render below or in the middle of the entity. Extreme offset values can make the health bar render out of view.",
