--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -58,7 +58,7 @@
 
   "key.categories.healthindicators": "Player Health Indicators",
   "key.healthindicators.renderingEnabled": "Toggle Rendering",
-  "key.healthindicators.heartStackingEnabled": "Override all settings and force hearts display",
+  "key.healthindicators.overrideAllFilters": "Override all config filters",
   "key.healthindicators.increaseHeartOffset": "Increase Heart Offset",
   "key.healthindicators.decreaseHeartOffset": "Decrease Heart Offset"
 }
