--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -20,14 +20,14 @@
   "yacl3.config.health-indicators:config.time_after_hit": "Seconds for health to disappear after attack",
   "yacl3.config.health-indicators:config.time_after_hit.desc": "Health bar will disappear after the set number of seconds.",
 
-  "yacl3.config.health-indicators:config.damaged_only": "Show health only if damaged",
+  "yacl3.config.health-indicators:config.damaged_only": "Show health only if entity is damaged",
   "yacl3.config.health-indicators:config.damaged_only.desc": "Health bar will display only if the entity's health is lower than its max health. May not work in cases where entities have absorption effect.",
 
-  "yacl3.config.health-indicators:config.on_crosshair": "Show health only if looked at",
-  "yacl3.config.health-indicators:config.on_crosshair.desc": "Health will only render if the entity is being looked at.",
+  "yacl3.config.health-indicators:config.looking_at": "Show health only when looking at entity",
+  "yacl3.config.health-indicators:config.looking_at.desc": "Health will only render if the entity is being looked at.",
 
-  "yacl3.config.health-indicators:config.reach": "'Looked at' range",
-  "yacl3.config.health-indicators:config.reach.desc": "How far can the entity be for the 'looked at' option. The default value (3 blocks) is equal to the attack reach for survival minecraft.",
+  "yacl3.config.health-indicators:config.reach": "'Looking at' range",
+  "yacl3.config.health-indicators:config.reach.desc": "How far can the entity be for the 'looking at' option. The default value (3 blocks) is equal to the attack reach for survival minecraft.",
 
   "yacl3.config.health-indicators:config.override_players": "Always show player health",
   "yacl3.config.health-indicators:config.override_players.desc": "Overrides the above options to always display health of Players, even if they have not been attacked, they are full health or they are not on crosshair",
@@ -48,12 +48,12 @@
   "yacl3.config.health-indicators:config.hearts_per_row": "Hearts per row (beta)",
 
 
-  "yacl3.config.health-indicators:config.category.toggles": "Filters",
+  "yacl3.config.health-indicators:config.category.filters": "Filters",
   "yacl3.config.health-indicators:config.category.appearance": "Appearance",
 
   "yacl3.config.health-indicators:config.category.appearance.group.heart_offset": "Health Bar Location Settings",
-  "yacl3.config.health-indicators:config.category.toggles.group.type": "Filter Entity Types",
-  "yacl3.config.health-indicators:config.category.toggles.group.advanced": "Advanced Filtering",
+  "yacl3.config.health-indicators:config.category.filters.group.type": "Filter Entity Types",
+  "yacl3.config.health-indicators:config.category.filters.group.advanced": "Advanced Filtering",
 
 
   "key.categories.healthindicators": "Player Health Indicators",
