--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -43,7 +43,7 @@
   "yacl3.config.health-indicators:config.number_color": "Text color",
   "yacl3.config.health-indicators:config.number_color.desc": "Color of the number",
 
-  "yacl3.config.health-indicators:config.render_number_display_shadow": "Render shadow behind the number display",
+  "yacl3.config.health-indicators:config.render_number_display_shadow": "Render shadow",
   "yacl3.config.health-indicators:config.render_number_display_shadow.desc": "Whether there should be a shadow behind the display text",
 
   "yacl3.config.health-indicators:config.render_number_display_background_color": "Render background",
@@ -53,14 +53,23 @@
   "yacl3.config.health-indicators:config.number_display_background_color.desc": "The background color for the number display",
 
 
-  "yacl3.config.health-indicators:config.heart_offset": "Health offset",
-  "yacl3.config.health-indicators:config.heart_offset.desc": "The distance between the top of the Entity and the health display. Negative offset values can make the health display render below or in the middle of the entity. Extreme offset values can make the health display render out of view.",
+  "yacl3.config.health-indicators:config.display_offset": "Display offset",
+  "yacl3.config.health-indicators:config.display_offset.desc": "The distance between the top of the Entity and the health display. Negative offset values can make the health display render below or in the middle of the entity. Extreme offset values can make the health display render out of view.",
 
   "yacl3.config.health-indicators:config.offset_step_size": "Offset step size",
-  "yacl3.config.health-indicators:config.offset_step_size.desc": "The offset that the keybind will change per press.",
+  "yacl3.config.health-indicators:config.offset_step_size.desc": "The offset that the keybind (default up-arrow and down-arrow) will change per click.",
 
   "yacl3.config.health-indicators:config.force_higher_offset_for_players": "Force higher offset for players",
   "yacl3.config.health-indicators:config.force_higher_offset_for_players.desc": "Normally, the health display renders at a higher offset for Players and Entities with a visible name-tag. \n \n However, some servers implement a custom name-tag which the mod does not recognize and account for. This option will forcibly raise offset for *all* players to fix the problem.",
+
+  "yacl3.config.health-indicators:config.message_type": "Message type",
+  "yacl3.config.health-indicators:config.message_type.desc": "Whether mod messages (Indicator Enabled/Disabled, Heart Offset, etc) will appear in chat or in the actionbar",
+
+  "yacl3.config.health-indicators:config.colored_messages": "Colored Messages",
+  "yacl3.config.health-indicators:config.colored_messages.desc": "Whether the Indicator Enabled/Disabled messages should be colored (Green and Red respectively)",
+
+  "yacl3.config.health-indicators:config.enable_commands": "Enable mod commands",
+  "yacl3.config.health-indicators:config.enable_commands.desc": "Enables the /healthindicators commands",
 
   "yacl3.config.health-indicators:config.hearts_clipping": "Heart clipping",
   "yacl3.config.health-indicators:config.hearts_clipping.desc": "Hearts will get pushed downwards if there is a solid block at their normal rendering position.",
@@ -70,11 +79,14 @@
 
   "yacl3.config.health-indicators:config.category.filters": "Filters",
   "yacl3.config.health-indicators:config.category.appearance": "Appearance",
+  "yacl3.config.health-indicators:config.category.messages": "Messages & Commands",
 
+  "yacl3.config.health-indicators:config.category.filters.group.entity_type": "Entity Types",
+  "yacl3.config.health-indicators:config.category.filters.group.advanced": "Advanced",
   "yacl3.config.health-indicators:config.category.appearance.group.offset": "Health Display Location",
   "yacl3.config.health-indicators:config.category.appearance.group.indicator_type": "Indicator Type",
-  "yacl3.config.health-indicators:config.category.filters.group.entity_type": "Filter Entity Types",
-  "yacl3.config.health-indicators:config.category.filters.group.advanced": "Advanced Filtering",
+  "yacl3.config.health-indicators:config.category.messages.group.messages_appearance": "Mod Messages",
+  "yacl3.config.health-indicators:config.category.messages.group.commands": "Mod Commands",
 
 
   "key.categories.healthindicators": "Player Health Indicators",
